Fix weird shifting

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -480,6 +480,11 @@ img.figure {
         width: 0;
         height: 0;
     }
+
+    .carousel__filler {
+        width: 0;
+        height: 0;
+    }
 }
 
 .carousel__window {
